test/TestSuite/Syntax/Errors/duration_unit.tjp
project test "Test" "1.0" 2007-03-25 +2m

task t "T" {
# MARK: error 5 duration_unit
  duration 1x
}
